# C-BIBLE

./: .gitignore  README.md  __main__.py  bible.py  pyproject.toml  requirements.txt
cbible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
