# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbible"
version = "0.1.0"
description = "A command Line interface Bible."
readme = "README.md"
authors = [{ name = "Vbello-tech", email = "vbellotech@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
]

[project.scripts]
cbible = "bible:bible"
# cbible = "__main__:bible"

